Add github workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,9 +29,7 @@ jobs:
         env:
           VERSION: ${{ github.ref_name }}
         name: Build
-        run: |
-          npm version ${VERSION#v*}
-          npm pack
+        run: npm pack
       - uses: softprops/action-gh-release@v1
         name: Release
         with:
