--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 .idea/**/libraries
 .idea
 
+**/*.zip
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
