--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pack": "npm-pack-zip",
     "test": "jest"
   },
   "author": "",
@@ -13,7 +14,8 @@
     "jwt-encode": "^1.0.1"
   },
   "devDependencies": {
-    "jest": "^29.3.1"
+    "jest": "^29.3.1",
+    "npm-pack-zip": "^1.3.0"
   },
   "type": "module"
 }
