--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "pack": "npm-pack-zip",
     "test": "jest"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.1.3",
+    "@google-cloud/storage": "^6.9.0",
     "jsonwebtoken": "^9.0.0",
-    "jwt-encode": "^1.0.1"
+    "jwt-encode": "^1.0.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "jest": "^29.3.1",
     "npm-pack-zip": "^1.3.0"
-  },
-  "type": "module"
+  }
 }
